--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll
               never send you spam or pass on your email address
             </p>
-            <form>
+            <form class="form">
               <input
                 type="email"
                 placeholder="email@example.com"
@@ -117,6 +117,7 @@
                 required
               />
               <button type="submit" class="btn footer-btn">Subscribe</button>
+              <small class="error-text">Please provide a valid email</small>
             </form>
           </label>
         </article>
